[project]
name = "erp_pipeline"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "dagster",
  "dagster-cloud",
  "dagster-dg-cli",
  "pandas",
  "pyarrow",
  "boto3",
  "sqlalchemy",
  "psycopg2-binary"
]


[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration.orchestration"